Add content and some images

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
       plan for world domination. Rumors that he's secretly a supervillain
       are slightly exaggerated.
       </p>
+
+    <img src="https://gravatar.com/avatar/ffda7d145b83c4b118f982401f962ca6?s=150"
+     alt="Michael Hartl">
       <p>
         You should follow Michael on Twitter
       <a href="https://twitter.com/mhartl" target="_blank" rel="noopener">here</a>.
@@ -59,6 +62,8 @@
       interfaces, doing front-end development, or writing some of the
       interface-related Learn Enough tutorials.
       </p>
+      <img src="https://gravatar.com/avatar/b65522a6f3a6899705d119d7aa232a6d?s=150"
+     alt="Lee Donahoe">
       <p>
         You should follow Michael on Twitter
         <a href="https://twitter.com/leedonahoe"target="_blank" rel="noopener">here</a>.
@@ -71,9 +76,21 @@
      tour bus as he is from his kitchen table.
 
       </p>
+      <img src="https://gravatar.com/avatar/e2d6ce2ba5c1b6d674ae8ff2b3b45d23?s=150"
+     alt="Nick Merwin">
       <p>
         You should follow Michael on Twitter
         <a href="https://twitter.com/nickmerwin"target="_blank" rel="noopener">here</a>.
       </p>
+      <p>
+    HTML was created by the original "web developer", computer scientist
+    <a href="https://en.wikipedia.org/wiki/Tim_Berners-Lee">Tim
+    Berners-Lee</a>. It's not true that Sir Tim invented HTML in order to
+    share pictures of his cat, but it would be cool if it were.
+  </p>
+
+  <img src="https://example.com/images/example.jpg" alt="A nonexistent example">
+
+  <h2>Background</h2>
   </body>
 </html>
